tests/purs/failing/OrphanRoleDeclaration.purs
-- @shouldFailWith OrphanRoleDeclaration
module Main where

type role Missing nominal
